@@ -1,6 +1,6 @@
 # -*- makefile -*- Time-stamp: <06/11/02 10:37:02 ptr>
 #
-# Copyright (c) 1997-1999, 2002, 2003, 2005, 2006
+# Copyright (c) 1997-1999, 2002, 2003, 2005-2007
 # Petr Ovtchenkov
 #
 # Portion Copyright (c) 1999-2001
@@ -11,10 +11,11 @@
 
 DBG_SUFFIX ?= g
 STLDBG_SUFFIX ?= stl${DBG_SUFFIX}
+LIBPREFIX ?= lib
 
 # Shared libraries:
 
-SO_NAME        := lib${LIBNAME}.$(SO)
+SO_NAME        := ${LIBPREFIX}${LIBNAME}.$(SO)
 SO_NAMEx       := ${SO_NAME}.${MAJOR}
 SO_NAMExx      := ${SO_NAMEx}.${MINOR}
 SO_NAMExxx     := ${SO_NAMExx}.${PATCH}
@@ -24,7 +25,7 @@ SO_NAME_OUTx   := $(OUTPUT_DIR)/${SO_NAMEx}
 SO_NAME_OUTxx  := $(OUTPUT_DIR)/${SO_NAMExx}
 SO_NAME_OUTxxx := $(OUTPUT_DIR)/${SO_NAMExxx}
 
-SO_NAME_DBG    := lib${LIBNAME}${DBG_SUFFIX}.$(SO)
+SO_NAME_DBG    := ${LIBPREFIX}${LIBNAME}${DBG_SUFFIX}.$(SO)
 SO_NAME_DBGx   := ${SO_NAME_DBG}.${MAJOR}
 SO_NAME_DBGxx  := ${SO_NAME_DBGx}.${MINOR}
 SO_NAME_DBGxxx := ${SO_NAME_DBGxx}.${PATCH}
@@ -35,7 +36,7 @@ SO_NAME_OUT_DBGxx  := $(OUTPUT_DIR_DBG)/${SO_NAME_DBGxx}
 SO_NAME_OUT_DBGxxx := $(OUTPUT_DIR_DBG)/${SO_NAME_DBGxxx}
 
 ifndef WITHOUT_STLPORT
-SO_NAME_STLDBG    := lib${LIBNAME}${STLDBG_SUFFIX}.$(SO)
+SO_NAME_STLDBG    := ${LIBPREFIX}${LIBNAME}${STLDBG_SUFFIX}.$(SO)
 SO_NAME_STLDBGx   := ${SO_NAME_STLDBG}.${MAJOR}
 SO_NAME_STLDBGxx  := ${SO_NAME_STLDBGx}.${MINOR}
 SO_NAME_STLDBGxxx := ${SO_NAME_STLDBGxx}.${PATCH}
@@ -49,13 +50,13 @@ endif
 
 # Static libraries:
 
-A_NAME := lib${LIBNAME}.$(ARCH)
+A_NAME := ${LIBPREFIX}${LIBNAME}.$(ARCH)
 A_NAME_OUT := $(OUTPUT_DIR_A)/$(A_NAME)
 
-A_NAME_DBG := lib${LIBNAME}${DBG_SUFFIX}.$(ARCH)
+A_NAME_DBG := ${LIBPREFIX}${LIBNAME}${DBG_SUFFIX}.$(ARCH)
 A_NAME_OUT_DBG := $(OUTPUT_DIR_A_DBG)/$(A_NAME_DBG)
 
 ifndef WITHOUT_STLPORT
-A_NAME_STLDBG := lib${LIBNAME}${STLDBG_SUFFIX}.$(ARCH)
+A_NAME_STLDBG := ${LIBPREFIX}${LIBNAME}${STLDBG_SUFFIX}.$(ARCH)
 A_NAME_OUT_STLDBG := $(OUTPUT_DIR_A_STLDBG)/$(A_NAME_STLDBG)
 endif
