@@ -1,0 +1,9 @@
+# -*- Makefile -*- Time-stamp: <06/11/29 01:59:50 ptr>
+
+LIBPREFIX :=
+LIBNAME = test
+MAJOR = 0
+MINOR = 1
+PATCH = 2
+SRC_CC = test_cc.cc
+SRC_C = test_c.c
